--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          distribution: 'zulu'
+          java-version: '21'
 
       # Install Saxon-HE 9
       - name: Install Saxon-HE 9
